# zygisk_af

./: README.md  module.gradle
.github/workflows/: build.yml
gradle/wrapper/: gradle-wrapper.properties
module/: build.gradle
module/src/main/: AndroidManifest.xml
module/src/main/cpp/: CMakeLists.txt  CMakePresets.json
module/src/main/cpp/cmake/: tools.cmake
module/src/main/cpp/include/: AllInclude.h  mymman.hpp  obfuscate.h  patch.hpp  yinglog.hpp
module/src/main/cpp/include/il2cpp/: UnityResolve.hpp  initil2cpp.hpp
module/src/main/cpp/project/KittyMemory/: KittyMemory.cpp  KittyMemory.hpp  MemoryPatch.cpp
module/src/main/cpp/project/proc_maps_parser/: pmparser.c  pmparser.h
module/src/main/cpp/project/proc_maps_parser/.github/workflows/: main.yml
module/src/main/cpp/project/ying/: CMakeLists.txt  main.cpp  zygisk.hpp
module/src/main/cpp/project/ying/include/: af.cpp  hook.hpp  sgyun.h  yckz.cpp  yingMemory.cpp  yingMemory.hpp
