cmake_minimum_required(VERSION 3.20)
project("my_project" VERSION 1.0 LANGUAGES CXX)
include("cmake/tools.cmake")
global_include("")
option(use_KittyMemory "" 0)
if (use_KittyMemory)
add_definitions(-DkNO_KEYSTONE)
file(GLOB KITTYMEMORY_SRC "project/KittyMemory/*.cpp")
list(APPEND source ${KITTYMEMORY_SRC})
endif()
add_subdirectory("project/ying")